--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,95 @@
+
 .Rproj.user
 .Rhistory
 .RData
 .Ruserdata
 
 /.quarto/
+
+/data
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+env/
+venv/
+ENV/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# Jupyter Notebook
+.ipynb_checkpoints
+*.ipynb_checkpoints/
+
+# IPython
+profile_default/
+ipython_config.py
+
+# Virtual environments
+.venv/
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# IDEs
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.DS_Store
+
+# PyCharm
+.idea/
+
+# VS Code
+.vscode/
+*.code-workspace
+
+# macOS
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Windows
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+
+# Compiled output
+*.pyc
+*.pyo
+
+# Environment variables
+.env
+.env.local
+
+# Quarto rendering outputs
+*_files/
+*_cache/
+/.quarto/
+_site/
+_book/
+
+# R and Quarto temp files
+.Rproj.user
+.httr-oauth
