Enhance project files with updated formatting and expanded content:
- **Refined proposal (`proposal.qmd`)**: Updated title, author details, project description, and dataset analysis plan. Added detailed queries, visualizations, and analysis structure.
- **Expanded requirements (`requirements.txt`)**: Included libraries for data analysis, visualization, machine learning, and notebook support.
- **Improved presentation definitions**: Adjusted layout, added visual elements, and refined markdown styling.
- **Updated `about.qmd`**: Corrected author formatting, expanded content.
- **Expanded `.gitignore`**: Added comprehensive ignore patterns for Python, Jupyter, and project-specific directories.
- Updates to `_freeze` configurations for proposal, about, and index files for execution consistency and added elements.

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,10 @@
 
 /.quarto/
 
-/data
+# Data directories (but allow README.md)
+/data/raw/
+/data/processed/
+/data/models/
 /usernotes
 
 # Python
@@ -94,3 +97,4 @@ _book/
 # R and Quarto temp files
 .Rproj.user
 .httr-oauth
+**/*.quarto_ipynb
