Update `_quarto.yml` with new "Analysis" page link and set `freeze` to true

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -12,6 +12,8 @@ website:
         href: index.qmd
       - text: Proposal
         href: proposal.qmd
+      - text: Analysis
+        href: analysis.qmd
       - text: Presentation
         href: presentation.qmd
       - text: About
@@ -25,4 +27,4 @@ format:
     toc: true
 
 execute:
-  freeze: auto
+  freeze: true
