Update `_quarto.yml` and add detailed content to `Writeup.qmd`:
- Fixed "Writeup" link case in `_quarto.yml`.
- Expanded `Writeup.qmd` with metadata, detailed project narrative, refined findings, and actionable recommendations for Star Power Analysis.

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -19,7 +19,7 @@ website:
       - text: About
         href: about.qmd
       - text: Writeup
-        href: writeup.qmd
+        href: Writeup.qmd
 
 format:
   html:
