--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,26 @@
 # Core dependencies for data import and database
 kagglehub
-pandas
+pandas>=2.0.0
 psycopg2-binary
 python-dotenv
 
 # Data visualization
-matplotlib
-seaborn
+matplotlib>=3.7.0
+seaborn>=0.12.0
 
 # Machine learning and scientific computing
-numpy
-scikit-learn
-xgboost
-statsmodels
+numpy>=1.24.0
+scikit-learn>=1.3.0
+xgboost>=2.0.0
+statsmodels>=0.14.0
+
+# Statistical analysis
+scipy>=1.11.0
 
 # Jupyter notebook support
-jupyter
-ipykernel
-nbformat
+jupyter>=1.0.0
+ipykernel>=6.25.0
+nbformat>=5.9.0
+
+# Optional: Enhanced visualizations
+plotly>=5.14.0
