--- a/.github/workflows/check-repo-organization.yml
+++ b/.github/workflows/check-repo-organization.yml
@@ -13,7 +13,7 @@ jobs:
         checklist::quit_on_failure({
           checklist::check_allowed_files(
           c("_extra/*", "images/*", "_freeze/*",
-            "data/*.csv", "data/*.csv", "data/*.xls", "data/*.xlsx", "data/*.RDS", "data/README.md", "data/*.qmd",
+            "data/*.csv", "data/*.csv", "data/*.xls", "data/*.xlsx", "data/*.RDS", "data/*.pkl", "data/README.md", "data/*.qmd",
             "README.md", "project-final.Rproj",
             "index.qmd", "presentation.qmd", "proposal.qmd", "about.qmd", "_quarto.yml", "data/*.scss", "*.ipynb", "requirements.txt"
             )
